--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="harga">Harga</string>
     <string name="cogs">COGS</string>
     <string name="product_image">Produk Image</string>
+    <string name="cari_item">Cari Item</string>
 </resources>
